fixes header line spacing and makes post attributes easier to read

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: 'Book Antiqua', serif;
     font-size: 1.125em;
-    line-height: 1.575em;
     color: #141823;
     background-color: #ecedef;
     margin: 0;
@@ -19,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 p {
     margin: 1.5em 0;
+    line-height: 1.575em;
 }
 sup {
   color: black;
@@ -137,7 +137,7 @@ sup > a {
     line-height: 1.2;
     margin: 0 0 0.4em 0;
 }
-.post-date {
+.post-attributes > p {
     display: block;
     color: #7a7b7c;
     font-size: 0.8em;
@@ -146,7 +146,6 @@ sup > a {
 .post-header {
     color: #7a7b7c;
     display: block;
-    font-size: 0.8em;
     margin: 0;
 }
 .post-footer {
@@ -513,14 +512,13 @@ footer {
 @media only screen and (min-width: 40.063em) {
     body {
         font-size: 1.125rem;
-        line-height: 1.575em;
     }
     .nav-bar {
         padding: 0.8em 0;
     }
     .list-header-title {
         font-weight: normal;
-        font-size: 4.2em;
+        font-size: 4em;
     }
     .title-img-overlay {
       font-size: 2.5em;
